2002-11-19  Adam Fedor  <fedor@gnu.org>

	* Version: 1.5.1
	* Documentation/news.texi: Updated.

2002-11-19  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSBundle.h: More documentation. Add missing
	MacOSX methods.
	* Source/NSBundle.m (-executablePath): New
	(-load): Use it.
	(+pathsForResourcesOfType:inDirectory:): New stub.
	(-pathsForResourcesOfType:inDirectory:forLocalization:): Idem.
	(-pathForResource:ofType:inDirectory:forLocalization:): Idem.
	(+preferredLocalizationsFromArray:): New method.
	(+preferredLocalizationsFromArray:forPreferences:): Idem.
	(-localizedInfoDictionary): Idem.
	(-localizations): Idem.
	(-preferredLocalizations): Idem.

	* Source/cifframe.m (cifframe_from_info): Fix so that stucture
	returns get space allocated.

2002-11-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/behavior.m: Moved to Source/Additions/behavior.m
	* Source/Unicode.m: Moved to Source/Additions/Unicode.m
	* Source/Additions/GCObject.m: new experimental GC class.
	* Source/Additions/GCArray.m: ditto
	* Source/Additions/GCDictionary.m: ditto
	* Headers/gnustep/base/GCObject.h: Garbage collection classes intended
	for use by gdl2 and gsweb.

2002-11-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCompatibility.m: Fix for case where a non property list	
	object is found when outputting a description.

2002-11-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fix for getting integer, float and bool
	values when they are stored as NSNumbers (problem reported by
	Ludovic Marcotte).  Also optimise a little.

2002-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Port pipe to mingw.
	* Tools/gdomap.c: Fix for modern mingw interface lookup.
	Patch by Tom Koelman

2002-11-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Try again ... get
	([-setVolatileDomain:forName:]) and ([-setPersistentDomain:forName:])
	to conform to both the OpenStep standard and the current MacOS-X
	documentation.
